--- a/root/assets/css/screen.css
+++ b/root/assets/css/screen.css
@@ -858,6 +858,7 @@ body.nav-opened .nav {
     height: 38px;
     padding: 1px 0 5px 0;
     width: auto;
+    filter: invert(100%) sepia(6%) saturate(1%) hue-rotate(55deg) brightness(103%) contrast(100%);
 }
 
 .menu-button {
