--- a/root/_includes/navigation.html
+++ b/root/_includes/navigation.html
@@ -5,7 +5,7 @@
     </a>
     <ul>
         <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}">Home</a></li>
-        <li class="nav-about {% if page.current == 'about' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}about">About</a></li>
+        <li class="nav-about {% if page.current == 'about-me' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}about-me">About me</a></li>
         <li class="nav-tips-and-tricks {% if page.current == 'tag' && page.url contains 'Tips' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/Tips%20and%20tricks">Tips and tricks</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
