--- a/root/_layouts/page.html
+++ b/root/_layouts/page.html
@@ -17,15 +17,21 @@ class: 'page-template'
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {% endif %}
     </nav>
+    <div class="vertical">
+        <div class="main-header-content inner">
+            <h1 class="page-title">{{ page.title }}</h1>
+            <!-- <h2 class="page-description">{{ site.description }}</h2> -->
+        </div>
+    </div>
 </header>
 
 <main class="content" role="main">
     <article class="post">
         <!-- Everything inside the #post tags pulls data from the post -->
 
-        <header class="post-header">
+        <!-- <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
-        </header>
+        </header> -->
 
         <section class="post-content">
             {{ content }}
