Add my face image

--- a/root/assets/css/screen.css
+++ b/root/assets/css/screen.css
@@ -2253,3 +2253,10 @@ body.page-template .post-title {
    End of file. Animations should be the last thing here. Do not add stuff
    below this point, or it will probably fuck everything up.
    ========================================================================== */
+
+#about-me-face {
+    width: 30%;
+    min-width: 150px;
+    padding-left: 20px;
+    float: right;
+}
