--- a/root/_layouts/page.html
+++ b/root/_layouts/page.html
@@ -33,9 +33,9 @@ class: 'page-template'
             <h1 class="post-title">{{ page.title }}</h1>
         </header> -->
 
-        <section class="post-content">
+        <!-- <section class="post-content"> -->
             {{ content }}
-        </section>
+        <!-- </section> -->
 
     </article>
 </main>
