Add background covers

--- a/root/_layouts/tag.html
+++ b/root/_layouts/tag.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-cover: 'assets/images/cover2.jpg'
+cover: 'assets/images/cover-keyboard.webp'
 class: 'tag-template'
 navigation: True
 current: tag
@@ -13,7 +13,7 @@ current: tag
     {% assign new_cover='assets/images/cover7.jpg' %}
     {% assign tag_description='Some of the greatest words ever spoken.' %}
 {% elsif page.url contains 'fiction' %}
-    {% assign new_cover='assets/images/cover1.jpg' %}
+    {% assign new_cover='assets/images/cover-laptop.webp' %}
 {% endif %}
 
 <!-- default -->
