--- a/root/_layouts/author.html
+++ b/root/_layouts/author.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Author
-cover: 'assets/images/cover4.jpg'
+cover: 'assets/images/cover-man-at-work.webp'
 class: 'author-template'
 navigation: True
 label: Author
