--- a/root/assets/css/screen.css
+++ b/root/assets/css/screen.css
@@ -763,15 +763,28 @@ body.nav-opened .nav {
     color: #fff;
 }
 
+.menu-footer {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    right: 30px;
+}
+.social-links {
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: space-around;
+}
+.social-links > a > img {
+    height: 32px;
+    width: 32px;
+    display: block;
+    filter: invert(100%) sepia(6%) saturate(1%) hue-rotate(55deg) brightness(103%) contrast(100%);
+}
 .subscribe-button {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     display: block;
-    position: absolute;
-    bottom: 30px;
-    left: 30px;
-    right: 30px;
     height: 38px;
     padding: 0 20px;
     color: #111 !important; /* Overides `.nav a:link, .nav a:visited` colour */
