--- a/root/_layouts/post.html
+++ b/root/_layouts/post.html
@@ -106,6 +106,15 @@ class: 'post-template'
                 {% include disqus.html %}
             {% endif %}
 
+            <script src="https://utteranc.es/client.js"
+                    repo="dominikbrandon/dominikbrandon.com"
+                    issue-term="title"
+                    label="discussion ✨"
+                    theme="github-light"
+                    crossorigin="anonymous"
+                    async>
+            </script>
+
         </footer>
 
     </article>
