--- a/root/_layouts/author.html
+++ b/root/_layouts/author.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Author
-cover: 'assets/images/cover-man-at-work.webp'
+cover: '/assets/images/cover-man-at-work.webp'
 class: 'author-template'
 navigation: True
 label: Author
@@ -16,7 +16,7 @@ current: author
 <!-- #author  -->
     <header class="main-header author-head {% if page.cover %}" style="background-image: url({{ site.baseurl }}{{ page.cover }}) {% else %}no-cover{% endif %}">
         <nav class="main-nav overlay clearfix">
-            {% if page.logo %}<a class="blog-logo" href="{{ site.baseurl }}"><img src="{{ site.baseurl }}{{ page.logo }}" alt="Blog Logo" /></a>{% endif %}
+            {% if page.logo %}<a class="blog-logo" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}{{ page.logo }}" alt="Blog Logo" /></a>{% endif %}
             {% if page.navigation %}
                 <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
             {% endif %}
