Rollback from deployment using Github Actions
This doesn't support plugins thus not being able to generate
authors and tags pages.

--- a/root/_includes/navigation.html
+++ b/root/_includes/navigation.html
@@ -4,16 +4,16 @@
         <span class="hidden">Close</span>
     </a>
     <ul>
-        <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/">Home</a></li>
-        <li class="nav-about {% if page.current == 'about-me' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/about-me">About me</a></li>
-        <li class="nav-tips-and-tricks {% if page.current == 'tag' && page.url contains 'Tips' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/tag/Tips%20and%20tricks">Tips and tricks</a></li>
+        <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}">Home</a></li>
+        <li class="nav-about {% if page.current == 'about-me' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}about-me">About me</a></li>
+        <li class="nav-tips-and-tricks {% if page.current == 'tag' && page.url contains 'Tips' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/Tips%20and%20tricks">Tips and tricks</a></li>
     </ul>
     <div class="menu-footer">
         <div class="social-links">
             <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/dominik-grzelak-b46a56167/"><img src="/assets/images/linkedin.svg" alt="LinkedIn logo"></a>
             <a target="_blank" rel="noopener noreferrer" href="https://github.com/dominikbrandon"><img src="/assets/images/github.svg" alt="GitHub logo"></a>
         </div>
-        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}/feed.xml">Subscribe</a>
+        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
     </div>
 </div>
 <span class="nav-cover"></span>
